Processes官方案例2-b 抽取小流程作为大流程步骤

--- a/notes/01.md
+++ b/notes/01.md
@@ -3267,11 +3267,20 @@ flowchart LR
 
 
 
+- **过程（Process）**：为实现特定目标而设计的一系列步骤。这些步骤以这样一种方式相互连接，以便它们可以通过发送和接收事件进行通信。步骤之间的连接是在流程创建期间建立的。
+- **步骤（Steps）**：流程中的各个活动，每个活动都有定义的输入和输出，有助于实现总体目标。现有流程可用作另一个流程中的步骤。步骤主要有两种类型：
+  - **无状态步骤（Stateless Steps）**：这些步骤不会在执行之间保留任何信息。它们独立运行，无需存储状态数据。
+  - **有状态步骤（Stateful Steps）**：这些步骤维护可持久的状态，从而允许在流程的后续运行中重复使用和更新状态。这些步骤的状态可以存储和序列化。
+
+- 通常，流程和步骤都设计为可在不同的流程中重复使用。
 
 
 
 
-案例2-a
+
+
+
+**案例2-a**
 
 账户开设示例包含了两种不同的实现方式，覆盖相同的场景，只是使用了不同的SK组件来达到同样的目标。
 
@@ -3336,6 +3345,104 @@ flowchart LR
 4. **核心系统记录创建**：在核心系统中创建记录，同时触发营销数据库、CRM记录创建以及生成欢迎包（包括账户详情）。
 5. **营销与CRM记录创建**：一旦营销和CRM记录创建成功，即准备好了欢迎包。
 6. **通知用户账户创建成功**：最后，通过邮件服务通知用户账户创建成功，标志着此次交互的结束。
+
+**案例2-b**
+
+- 在对具有共同主题/依赖关系的步骤进行分组，并创建较小的子流程并将其用作步骤后，根流程如下所示：
+
+```mermaid
+flowchart LR
+    User(User)
+    FillForm(Chat With User <br/> to Fill New <br/> Customer Form)
+    NewAccountVerification[[New Account Verification<br/> Process]]
+    NewAccountCreation[[New Account Creation<br/> Process]]
+    Mailer(Mail <br/> Service)
+
+    User<-->|Provides user details|FillForm
+    FillForm-->|New User Form|NewAccountVerification
+    NewAccountVerification-->|Account Credit Check<br/> Verification Failed|Mailer
+    NewAccountVerification-->|Account Fraud<br/> Detection Failed|Mailer
+    NewAccountVerification-->|Account Verification <br/> Succeeded|NewAccountCreation
+    NewAccountCreation-->|Account Creation <br/> Succeeded|Mailer
+```
+
+- 其中，用作步骤的流程（重复使用Step02a_AccountOpening使用的相同步骤）是：
+
+```mermaid
+graph LR
+    NewUserForm([New User Form])
+    NewUserFormConv([Form Filling Interaction])
+    
+    subgraph AccountCreation[Account Creation Process]
+        direction LR
+        AccountValidation([Account Verification Passed])
+        NewUser1([New User Form])
+        NewUserFormConv1([Form Filling Interaction])
+
+        CoreSystem(Core System <br/> Record <br/> Creation)
+        Marketing(New Marketing <br/> Record Creation) 
+        CRM(CRM Record <br/> Creation)
+        Welcome(Welcome <br/> Packet)
+        NewAccountCreation([New Account Success])
+
+        NewUser1-->CoreSystem
+        NewUserFormConv1-->CoreSystem
+
+        AccountValidation-->CoreSystem
+        CoreSystem-->CRM-->|Success|Welcome
+        CoreSystem-->Marketing-->|Success|Welcome
+        CoreSystem-->|Account Details|Welcome
+
+        Welcome-->NewAccountCreation
+    end
+
+    subgraph AccountVerification[Account Verification Process]
+        direction LR
+        NewUser2([New User Form])
+        CreditScoreCheck[Credit Check <br/> Step]
+        FraudCheck[Fraud Detection <br/> Step]
+        AccountVerificationPass([Account Verification Passed])
+        AccountCreditCheckFail([Credit Check Failed])
+        AccountFraudCheckFail([Fraud Check Failed])
+
+        
+        NewUser2-->CreditScoreCheck-->|Credit Score <br/> Check Passed|FraudCheck
+        FraudCheck-->AccountVerificationPass
+
+        CreditScoreCheck-->AccountCreditCheckFail
+        FraudCheck-->AccountFraudCheckFail
+    end
+
+    AccountVerificationPass-->AccountValidation
+    NewUserForm-->NewUser1
+    NewUserForm-->NewUser2
+    NewUserFormConv-->NewUserFormConv1
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
