Processes官方案例3-a 步骤重用、状态共用、流程序列化存储

--- a/notes/01.md
+++ b/notes/01.md
@@ -3236,12 +3236,6 @@ public class Step11_AssistantTool_FileSearch(ITestOutputHelper output) : BaseAge
 - **事件驱动型架构：**利用事件和元数据有效地触发操作和流程步骤之间的转换。
 - **完全控制和可审计性：**以定义和可重复的方式保持对流程的控制，并通过 Open Telemetry 完成审计功能。
 
-**概念**
-
-- **过程：**为实现客户的特定业务目标而安排的步骤集合。
-- **步骤：**流程中具有定义输入和输出的活动，有助于实现更大的目标。
-- **模式：**特定的序列类型，指示如何执行步骤以完全完成流程。
-
 **使用场景**
 
 - **开户：**此过程包括多个步骤，例如信用提取和评级、欺诈检测、在核心系统中创建客户账户以及向客户发送欢迎信息，包括他们的客户 ID。
@@ -3266,6 +3260,8 @@ flowchart LR
 ```
 
 
+
+**概念核心**
 
 - **过程（Process）**：为实现特定目标而设计的一系列步骤。这些步骤以这样一种方式相互连接，以便它们可以通过发送和接收事件进行通信。步骤之间的连接是在流程创建期间建立的。
 - **步骤（Steps）**：流程中的各个活动，每个活动都有定义的输入和输出，有助于实现总体目标。现有流程可用作另一个流程中的步骤。步骤主要有两种类型：
@@ -3346,6 +3342,8 @@ flowchart LR
 5. **营销与CRM记录创建**：一旦营销和CRM记录创建成功，即准备好了欢迎包。
 6. **通知用户账户创建成功**：最后，通过邮件服务通知用户账户创建成功，标志着此次交互的结束。
 
+
+
 **案例2-b**
 
 - 在对具有共同主题/依赖关系的步骤进行分组，并创建较小的子流程并将其用作步骤后，根流程如下所示：
@@ -3420,13 +3418,156 @@ graph LR
 
 ```
 
+**案例3-a**
 
+本教程包含一组与餐厅的 Food Preparation Processes 相关的食物食谱。
 
+展示步骤的重用、流程的创建、多个事件的生成、对食品制备样品使用有状态步骤。
 
+##### 无状态产品准备过程
 
+###### 土豆条准备过程
 
+```mermaid
+flowchart LR
+    PreparePotatoFriesEvent([准备土豆<br/>条事件])
+    PotatoFriesReadyEvent([土豆条<br/>准备好事件])
 
+    GatherIngredientsStep[收集原料<br/>步骤]
+    CutStep[切食物<br/>步骤]
+    FryStep[炸食物<br/>步骤]
 
+    PreparePotatoFriesEvent --> GatherIngredientsStep -->| 切土豆<br/>_原料收集完成_| CutStep --> |**土豆已切好**<br/> _食物已切片就绪_| FryStep --> |_油炸食物就绪_|PotatoFriesReadyEvent
+    FryStep -->|炸土豆失败<br/>_油炸食物失败_| GatherIngredientsStep
+```
+
+###### 炸鱼准备过程
+
+```mermaid
+flowchart LR
+    PrepareFriedFishEvent([准备炸<br/>鱼事件])
+    FriedFishReadyEvent([炸鱼<br/>准备好事件])
+
+    GatherIngredientsStep[收集原料<br/>步骤]
+    CutStep[切食物<br/>步骤]
+    FryStep[炸食物<br/>步骤]
+
+    PrepareFriedFishEvent --> GatherIngredientsStep -->| 切鱼<br/>_原料收集完成_| CutStep --> |**鱼已切好**<br/> _食物已切块就绪_| FryStep --> |_油炸食物就绪_| FriedFishReadyEvent
+    FryStep -->|**炸鱼失败**<br/> _油炸食物失败_| GatherIngredientsStep
+```
+
+###### 鱼汉堡准备过程
+
+```mermaid
+flowchart LR
+    PrepareFishSandwichEvent([准备鱼<br/>汉堡事件])
+    FishSandwichReadyEvent([鱼汉堡<br/>准备好事件])
+
+    FriedFishStep[[炸鱼<br/>过程步骤]]
+    AddBunsStep[添加面包<br/>步骤]
+    AddSpecialSauceStep[添加特殊<br/>酱料步骤]
+
+    PrepareFishSandwichEvent -->|准备炸鱼| FriedFishStep -->|炸鱼就绪| AddBunsStep --> |面包已加| AddSpecialSauceStep --> |特殊酱料已加| FishSandwichReadyEvent
+```
+
+###### 鱼和薯条准备过程
+
+```mermaid
+flowchart LR
+    PrepareFishAndChipsEvent([准备<br/>鱼和薯条<br/>事件])
+    FishAndChipsReadyEvent([鱼和薯条<br/>准备好事件])
+
+    FriedFishStep[[炸鱼<br/>过程步骤]]
+    PotatoFriesStep[[土豆条<br/>过程步骤]]
+    AddCondiments[添加调味品<br/>步骤 ]
+
+    PrepareFishAndChipsEvent -->|准备炸鱼| FriedFishStep --> |炸鱼就绪| AddCondiments
+    PrepareFishAndChipsEvent -->|准备土豆条| PotatoFriesStep -->|土豆条就绪| AddCondiments
+    AddCondiments -->|调味品已加| FishAndChipsReadyEvent
+```
+
+##### 有状态的产品准备过程
+
+此部分中的过程包含了对先前使用的食物准备过程的以下修改/增加：
+
+- `收集原料步骤`现在是有状态的，有一个预定义的初始原料数量，随着订单的准备而使用。当没有剩余原料时，它会发出`缺货事件`。
+- `切食物步骤`现在是一个有状态组件，具有跟踪刀具锋利度的`刀具锋利度状态`。
+- 每次调用`切食物`和`剁食物`功能时，刀具的锋利度都会恶化。
+- `切食物步骤`还有一个额外的输入函数`磨刀功能`。
+- 新的`磨刀功能`能磨锐刀具并增加刀具的锋利度 - 刀具锋利度状态。
+- 不时地，`切食物步骤`的功能`切食物`和`剁食物`会失败，并发出一个`需要磨刀事件`，然后触发`磨刀功能`。
+
+继续翻译您提供的笔记内容：
+
+###### 带有刀具磨砺和原料库存管理的土豆条准备过程
+
+以下是基于土豆条准备流程的过程修改，加入了之前提到的有状态步骤。
+
+```mermaid
+flowchart LR
+    PreparePotatoFriesEvent([准备土豆<br/>条事件])
+    PotatoFriesReadyEvent([土豆条<br/>准备好事件])
+    OutOfStock([原料<br/>缺货<br/>事件])
+
+    FryStep[炸食物<br/>步骤]
+
+    subgraph GatherIngredientsStep[收集原料步骤]
+        GatherIngredientsFunction[收集土豆<br/>功能]
+        IngredientsState[(原料<br/>库存<br/>状态)]
+    end
+    subgraph CutStep ["切食物步骤"]
+        direction LR
+        SliceFoodFunction[切食物<br/>功能]
+        SharpenKnifeFunction[磨刀<br/>功能]
+        CutState[(刀具<br/>锋利度<br/>状态)]
+    end
+    
+    CutStep --> |**土豆已切好**<br/> _食物已切片就绪_| FryStep --> |_油炸食物就绪_|PotatoFriesReadyEvent
+    FryStep -->|炸土豆失败<br/>_油炸食物失败_| GatherIngredientsStep
+    GatherIngredientsStep --> OutOfStock
+    
+    SliceFoodFunction --> |需要磨刀| SharpenKnifeFunction
+    SharpenKnifeFunction --> |刀具已磨锐| SliceFoodFunction
+
+    GatherIngredientsStep -->| 切土豆<br/>_原料收集完成_| CutStep
+    PreparePotatoFriesEvent --> GatherIngredientsStep 
+```
+
+###### 带有刀具磨砺和原料库存管理的炸鱼准备过程
+
+以下是基于炸鱼准备流程的过程修改，加入了之前提到的有状态步骤。
+
+```mermaid
+flowchart LR
+    PrepareFriedFishEvent([准备炸<br/>鱼事件])
+    FriedFishReadyEvent([炸鱼<br/>准备好事件])
+    OutOfStock([原料<br/>缺货<br/>事件])
+
+    FryStep[炸食物<br/>步骤]
+
+    subgraph GatherIngredientsStep[收集原料步骤]
+        GatherIngredientsFunction[收集鱼<br/>功能]
+        IngredientsState[(原料<br/>库存<br/>状态)]
+    end
+    subgraph CutStep ["切食物步骤"]
+        direction LR
+        ChopFoodFunction[剁食物<br/>功能]
+        SharpenKnifeFunction[磨刀<br/>功能]
+        CutState[(刀具<br/>锋利度<br/>状态)]
+    end
+    
+    CutStep --> |**鱼已剁好**<br/> _食物已切块就绪_| FryStep --> |_油炸食物就绪_|FriedFishReadyEvent
+    FryStep -->|**炸鱼失败**<br/> _油炸食物失败_| GatherIngredientsStep
+    GatherIngredientsStep --> OutOfStock
+    
+    ChopFoodFunction --> |需要磨刀| SharpenKnifeFunction
+    SharpenKnifeFunction --> |刀具已磨锐| ChopFoodFunction
+
+    GatherIngredientsStep -->| 剁鱼<br/>_原料收集完成_| CutStep
+    PrepareFriedFishEvent --> GatherIngredientsStep 
+```
+
+**案例3-b**
 
 
 
