Processes官方案例3-b 展示子流程作为步骤的使用，生成多个事件，有条件地重用食品制备样本

--- a/notes/01.md
+++ b/notes/01.md
@@ -3569,9 +3569,32 @@ flowchart LR
 
 **案例3-b**
 
+- 目前，利用现有的产品准备流程，我们可以创建一个更为复杂的流程，该流程能够决定要配送哪些产品订单。
 
+```mermaid
+graph TD
+    PrepareSingleOrderEvent([准备单个订单 <br/> 事件])
+    SingleOrderReadyEvent([单个订单 <br/> 准备就绪事件])
+    OrderPackedEvent([订单打包完成 <br/> 事件])
 
+    DispatchOrderStep{{配送 <br/> 订单步骤}}
+    FriedFishStep[[炸鱼  <br/> 处理步骤]]
+    PotatoFriesStep[[薯条 <br/> 处理步骤]]
+    FishSandwichStep[[鱼三明治 <br/> 处理步骤]]
+    FishAndChipsStep[[炸鱼薯条 <br/> 处理步骤]]
 
+    PackFoodStep[打包食物 <br/> 步骤]
+
+    PrepareSingleOrderEvent -->|订单已接收| DispatchOrderStep
+    DispatchOrderStep -->|准备炸鱼| FriedFishStep -->|炸鱼准备就绪| SingleOrderReadyEvent
+    DispatchOrderStep -->|准备薯条| PotatoFriesStep -->|薯条准备就绪| SingleOrderReadyEvent
+    DispatchOrderStep -->|准备鱼三明治| FishSandwichStep -->|鱼三明治准备就绪| SingleOrderReadyEvent
+    DispatchOrderStep -->|准备炸鱼薯条| FishAndChipsStep -->|炸鱼薯条准备就绪| SingleOrderReadyEvent
+
+    SingleOrderReadyEvent-->PackFoodStep --> OrderPackedEvent
+```
+
+**案例4**
 
 
 
