Processes官方案例4 Agent、AgentGroup集成Processes

--- a/notes/01.md
+++ b/notes/01.md
@@ -3596,13 +3596,43 @@ graph TD
 
 **案例4**
 
+- 本教程演示了将_Agent Framework_与进程集成，这包括直接的_agent_交互以及使用_AgentGroupChat_。流程概括：
+
+  - 启动时触发用户输入模拟
+
+  - 用户输入后激活主代理处理
+
+  - 主代理根据需求调用日历/天气代理组
+
+  - 代理组内部通过策略函数控制对话流转
+
+  - 最终结果返回主代理并渲染输出
+
+- 涉及重点
+
+  - 每次Manager响应用户后对history进行意图判断，涉及对大模型的json_schema响应格式化，反序列化为Indent对象决定下一步发出事件名称。
+  - 每次启用agentGroup，先对之前用户和Manager的chatHistory总结，作为其输入。
+
+```mermaid
+flowchart RL
+    O --> A
+    O((开始))
+    A[用户] -->|输入| B[管理智能体]
+    A --> F((完成))
+    B --> |响应|A
+    B --> |委托| G
+    G --> |响应|B
+    subgraph G[群组聊天]
+        direction LR
+        D[智能体 1] --> E
+        E[智能体 2] --> D
+    end
+```
 
 
 
-
-
-
-
+> - 经过测试，现版本function calling设置为Auto，但是不加入任何Plugin时，国产大模型api全部报错InvalidParameter，使用GPT-4o中文运行失败，英文可行；同时也不支持json_schema格式化响应结果
+>
 
 
 
